--- a/MessagingApp/MessagingApp.csproj
+++ b/MessagingApp/MessagingApp.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.AI.OpenAI" />
 		<PackageReference Include="Azure.Identity" />
+		<PackageReference Include="Detester" />
 		<PackageReference Include="Microsoft.Extensions.AI" />
 		<PackageReference Include="Microsoft.Extensions.AI.Abstractions" />
 		<PackageReference Include="Microsoft.Extensions.AI.OpenAI" />
